k8s/registry-demo/registry-demo-ingress-redirect.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-demo-redirect
  annotations:
    nginx.ingress.kubernetes.io/permanent-redirect: https://datasetregister.netwerkdigitaalerfgoed.nl
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^(/register)$ $1/ redirect;
spec:
  ingressClassName: nginx
  rules:
    - host: demo.netwerkdigitaalerfgoed.nl
      http:
        paths:
          - path: /register(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: registry-demo
                port:
                  number: 80
